Improved the query engine